--- a/templates/testapp/book_detail.html
+++ b/templates/testapp/book_detail.html
@@ -11,4 +11,5 @@
     </div>
     <a class="btn btn-warning" href="/update/{{book.id}}">Update This Book Information</a>
     <a class="btn btn-danger" href="/delete/{{book.id}}">Delete This Book Information</a>
+    <br><br><button class="btn btn-primary" onclick="window.location.href='/'">Book List</button>
 {% endblock %}
