--- a/templates/testapp/book_detail.html
+++ b/templates/testapp/book_detail.html
@@ -1,7 +1,7 @@
 {% extends 'testapp/base.html' %}
 {% block body_block %}
     <div class="container">
-      <h1>{{book.title}} Information</h1>
+      <h1>Book Information</h1>
       <ul>
         <li>Title:<strong> {{book.title}}</strong></li>
         <li>Author:<strong> {{book.author}}</strong></li>
